--- a/learning/enhetssirkelen/index.html
+++ b/learning/enhetssirkelen/index.html
@@ -8,21 +8,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="/learning/color.css" type="text/css" />
     <link rel="stylesheet" href="/learning/learning.css" type="text/css" />
-    <link rel="stylesheet" href="/learning/phone.css" type="text/css" />
     <link rel="stylesheet" href="/learning/enhetssirkelen/style.css" type="text/css" />
-    <script type="application/javascript" src="/learning/enhetssirkelen/script.js" defer></script>
-    <script type="application/javascript" src="/learning/phone.js" defer></script>
+    <script type="application/javascript", src="/learning/enhetssirkelen/script.js" defer></script>
 </head>
 <body>
-    <div class="outside-wrapper">
-        <div class="inside-wrapper">
+    <div class="wrapper">
+        <div class="container" style="background-color: var(--enhetssirkelen);">
+            <div id="score"></div>
             <div class="content-wrapper">
-                <p id="score-count"></p>
-                <p id="respons"></p>
-                <h1 id="display"></h1>
+                <div id="info"></div>
+                <div id="display"></div>
                 <form action="#" id="form" autocomplete="off">
-                    <input type="text" id="input" tabindex="1"><br>
+                    <input type="text" id="input" tabindex="1" />
                     <input type="button" value="π" id="pi" tabindex="-1" />
                     <input type="button" value="°" id="deg" tabindex="-1" />
                     <input type="button" value="√" id="sqrt" tabindex="-1" /><br>
