--- a/learning/index.html
+++ b/learning/index.html
@@ -5,20 +5,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Learning</title>
     <link rel="icon" type=”image/svg+xml” href="/svg/favicon.svg" />
-    <script type="application/javascript", src="/learning/script.js" defer></script>
-    <style>
-        a {
-            display: block;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="/learning/style.css" type="text/css" />
+    <link rel="stylesheet" href="/learning/color.css" type="text/css" />
 </head>
 <body>
-    <a href="/learning/natoalfabet">Nato Alfabet</a>
-    <a href="/learning/kvadratsettning">Kvadratsettning</a>
-    <a href="/learning/hex">Hexadecimal</a>
-    <a href="/learning/binary">Binary</a>
-    <a href="/learning/primenumber">Prime Number</a>
-    <a href="/learning/enhetssirkelen">Enhetssirkelen</a>
-    <a href="/learning/trigonometry">Trigonometry</a>
+    <div class="wrapper">
+        <a href="/learning/natoalfabet" style="background-color: var(--nato-alfabet);">Nato Alfabet</a>
+        <a href="/learning/kvadratsettning" style="background-color: var(--kvadratsettning);">Kvadratsettning</a>
+        <a href="/learning/hexadecimal" style="background-color: var(--hexadecimal);">Hexadecimal</a>
+        <a href="/learning/binary" style="background-color: var(--binary);">Binary</a>
+        <a href="/learning/primenumber" style="background-color: var(--prime-number);">Prime Number</a>
+        <a href="/learning/enhetssirkelen" style="background-color: var(--enhetssirkelen);">Enhetssirkelen</a>
+        <a href="/learning/trigonometri" style="background-color: var(--trigonometri);">Trigonometri</a>
+    </div>
 </body>
 </html>
