--- a/learning/trigonometri/index.html
+++ b/learning/trigonometri/index.html
@@ -3,24 +3,22 @@
 <head>
     <meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Trigonometry</title>
+    <title>Trigonometri</title>
     <link rel="icon" type=”image/svg+xml” href="/svg/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="/learning/color.css" type="text/css" />
     <link rel="stylesheet" href="/learning/learning.css" type="text/css" />
-    <link rel="stylesheet" href="/learning/phone.css" type="text/css" />
-    <link rel="stylesheet" href="/learning/trigonometry/style.css" type="text/css" />
-    <script type="application/javascript" src="/learning/trigonometry/script.js" defer></script>
-    <script type="application/javascript" src="/learning/phone.js" defer></script>
+    <script type="application/javascript", src="/learning/trigonometri/script.js" defer></script>
 </head>
 <body>
-    <div class="outside-wrapper">
-        <div class="inside-wrapper">
+    <div class="wrapper">
+        <div class="container" style="background-color: var(--trigonometri);">
+            <div id="score"></div>
             <div class="content-wrapper">
-                <p id="score-count"></p>
-                <p id="respons"></p>
-                <h1 id="display"></h1>
+                <div id="info"></div>
+                <div id="display"></div>
                 <form action="#" id="form" autocomplete="off">
                     <input type="text" id="input" tabindex="1"><br>
                     <input type="submit" value="Submit" id="submit" tabindex="-1" /><br>
