Update font link

--- a/learning/kvadratsettning/index.html
+++ b/learning/kvadratsettning/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type=”image/svg+xml” href="/svg/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/learning/color.css" type="text/css" />
     <link rel="stylesheet" href="/learning/learning.css" type="text/css" />
     <link rel="stylesheet" href="/learning/kvadratsettning/style.css" type="text/css" />
