--- a/dart/index.html
+++ b/dart/index.html
@@ -8,8 +8,8 @@
 		<link rel="icon" type="image/png" media="(not (prefers-color-scheme: dark))" href="/images/favicon-light.png" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
-        <link rel="stylesheet" href="/dart/start.css" type="text/css" />	
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" href="/dart/start.css" type="text/css" />
         <link rel="stylesheet" href="/dart/style.css" type="text/css" />
 		<link rel="stylesheet" href="/dart/board.css" type="text/css" />
         <script type="application/javascript", src="/dart/start.js" defer></script>
