Add Greek Alphabet page

--- a/learning/index.html
+++ b/learning/index.html
@@ -20,6 +20,7 @@
         <a href="/learning/primenumber" style="background-color: var(--prime-number);">Prime Number</a>
         <a href="/learning/enhetssirkelen" style="background-color: var(--enhetssirkelen);">Enhetssirkelen</a>
         <a href="/learning/trigonometri" style="background-color: var(--trigonometri);">Trigonometri</a>
+        <a href="/learning/greskalfabet" style="background-color: var(--gresk-alfabet);">Gresk Alfabet</a>
     </div>
 </body>
 </html>
