Add big and small only button to greek learning page

--- a/learning/greskalfabet/index.html
+++ b/learning/greskalfabet/index.html
@@ -24,6 +24,12 @@
                     <input type="submit" value="Submit" id="submit" tabindex="-1" />
                 </form>
             </div>
+            <div class="checkboxes">
+                <span>Small only: </span>
+                <input type="checkbox" id="small-checkbox" tabindex="-1" />
+                <span>Big only: </span>
+                <input type="checkbox" id="big-checkbox" tabindex="-1" />
+            </div>
         </div>
     </div>
 </body>
