--- a/tools/text/index.html
+++ b/tools/text/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="/text/style.css" type="text/css" />
-    <script type="application/javascript", src="/text/script.js" defer></script>
+    <link rel="stylesheet" href="/tools/text/style.css" type="text/css" />
+    <script type="application/javascript", src="/tools/text/script.js" defer></script>
 </head>
 <body>
     <div class="wrapper">
