Add Common Factors tools page

--- a/tools/index.html
+++ b/tools/index.html
@@ -15,6 +15,7 @@
     <div class="wrapper">
         <a href="/tools/text" style="background-color: var(--text);">Text</a>
         <a href="/tools/image" style="background-color: var(--image);">Image</a>
+        <a href="/tools/commonfactor" style="background-color: var(--common-factors); font-size: 2.35rem;">Common Factors</a>
     </div>
 </body>
 </html>
