--- a/tools/index.html
+++ b/tools/index.html
@@ -16,6 +16,7 @@
         <a href="/tools/text" style="background-color: var(--text);">Text</a>
         <a href="/tools/image" style="background-color: var(--image);">Image</a>
         <a href="/tools/commonfactor" style="background-color: var(--common-factors); font-size: 2.35rem;">Common Factors</a>
+        <a href="/tools/abcformel" style="background-color: var(--abc-formel);">abc-formel</a>
     </div>
 </body>
 </html>
