--- a/index.html
+++ b/index.html
@@ -37,12 +37,24 @@
 		<hr>
 		<div class="project">
 			<span>
-				<h2>Wolfenstein-like-Renderer</h2>
+				<h2>Wolfenstein like Renderer</h2>
 				My version of the classical Wolfenstein like game renderer project. It is made using SDL2 and works by shooting rays from a 2D character onto a 2D map and interpreting that in 3D.
 				<br><br>
 				Links: <a href="https://github.com/EmilBjorkeng/Wolfenstein-like-Renderer?tab=readme-ov-file">Github</a>
 			</span>
 			<img src="/images/wolfenstein-like-renderer.jpg" draggable="false" />
+		</div>
+		<hr>
+		<div class="project">
+			<img src="/images/software-rasterizer.png" draggable="false" />
+			<span>
+				<h2>Software Rasterizer</h2>
+				This is my custom implementation of a software rasterizer, which renders pixels to a pixel buffer and then displays the result to the screen using SDL3. The project includes my own implementations of vector, matrix, and quaternion math, all provided through custom, lightweight header files.
+				<br>
+				This project began as a (C++) clone of <a href="https://www.youtube.com/@SebastianLague">Sebastian Lague’s</a> software rasterizer, but over time it has evolved with enough additions and changes to become its own standalone project.
+				<br><br>
+				Links: <a href="https://github.com/EmilBjorkeng/Software-Rasterizer">Github</a>
+			</span>
 		</div>
 		<div class="bottom-padding"></div>
 	</body>
