--- a/tools/commonfactor/index.html
+++ b/tools/commonfactor/index.html
@@ -16,6 +16,7 @@
         <span id="text">Common factors:</span>
         <input type="text" id="text-box" placeholder="Enter numbers here: 128,256" />
         <div id="factors-display"></div>
+        <div id="prime-display"></div>
     </div>
 </body>
 </html>
