Add OpenGL-Rasterizer to projects list

--- a/index.html
+++ b/index.html
@@ -51,10 +51,20 @@
 				<h2>Software Rasterizer</h2>
 				This is my custom implementation of a software rasterizer, which renders pixels to a pixel buffer and then displays the result to the screen using SDL3. The project includes my own implementations of vector, matrix, and quaternion math, all provided through custom, lightweight header files.
 				<br>
-				This project began as a (C++) clone of <a href="https://www.youtube.com/@SebastianLague">Sebastian Lague’s</a> software rasterizer, but over time it has evolved with enough additions and changes to become its own standalone project.
+				This project began as a (C++) clone of <a href="https://www.youtube.com/@SebastianLague">Sebastian Lague's</a> software rasterizer, but over time it has evolved with enough additions and changes to become its own standalone project.
 				<br><br>
 				Links: <a href="https://github.com/EmilBjorkeng/Software-Rasterizer">Github</a>
 			</span>
+		</div>
+		<hr>
+		<div class="project">
+			<span>
+				<h2>OpenGL Rasterizer</h2>
+				This project is a GPU implementation of my Software-Rasterizer using OpenGL. It loads OBJ files and renders them in a 3D environment. Unlike the Software-Rasterizer, it uses the GLM math library for vectors and matrices instead of a custom implementation.
+				<br><br>
+				Links: <a href="https://github.com/EmilBjorkeng/OpenGL-Rasterizer">Github</a>
+			</span>
+			<img src="/images/opengl-rasterizer.png" draggable="false" />
 		</div>
 		<div class="bottom-padding"></div>
 	</body>
