Add option to close the control menu for the imaginary graph plotter

--- a/graph/imaginary/index.html
+++ b/graph/imaginary/index.html
@@ -17,7 +17,13 @@
 </head>
 <body>
     <div id="canvas-container"></div>
+    <div class="hamburger-menu" id="controls-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
     <div id="controls">
+        <br>
         <h3>Imaginary Graph Plotter</h3>
         <label>
             f(x) =
